--- a/src/layout/back_head.html
+++ b/src/layout/back_head.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="./css/style.back.css">
     <link rel="icon" href="img/logo_web.ico" type="image/x-icon"/>
     <script src="./js/vendors/jquery-3.6.0.min.js"></script>
-    <script src="./js/vendors/vue.js"></script>
-    <!-- <script src="./js/vendors/vue.min.js"></script> -->
+    <!-- <script src="./js/vendors/vue.js"></script> -->
+    <script src="./js/vendors/vue.min.js"></script>
     <!-- sweetalert -->
     <script src="./js/vendors/sweetalert2.all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.js"></script>
