--- a/src/sass/backpages/_back_product_detail.scss
+++ b/src/sass/backpages/_back_product_detail.scss
@@ -153,6 +153,16 @@ form {
     width: 260px;
     margin-right: 30px;
   }
+  /* Chrome, Safari, Edge, Opera */
+  input[type=number]::-webkit-outer-spin-button,
+  input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+  /* Firefox */
+  input[type=number] {
+    -moz-appearance: textfield;
+  }
 
   // 成本、售價
   p[for="prd_cost"]::before,
