--- a/src/layout/login_register.html
+++ b/src/layout/login_register.html
@@ -69,7 +69,7 @@
                 <input type="text" name="Street" id="Street" placeholder="仁和路166號">
             </div>
             <label for="phoneNumber">
-                <h5>連絡電話</h5>
+                <h5>聯絡電話</h5>
             </label>
             <input type="tel" name="phoneNumber" id="phoneNumber" placeholder="0910456789">
             <button type="button" id="send" class="to3">繼續</button>
