feat .member rwd fix

--- a/src/sass/frontpages/_member_checklist.scss
+++ b/src/sass/frontpages/_member_checklist.scss
@@ -166,6 +166,11 @@ border: 1px solid $color_G ;
 }
 
 .mb_container{
+    @include pad{
+        width: 100%;
+       overflow-y: auto;
+
+    }
     @include mobile{
         width: 100%;
        overflow-y: auto;
